    - pg_ctlcluster: Only do locales check for <= 8.3 for now.
    - "ident sameuser" does not exist any more in 8.4, just use "ident" from
      8.4 on.
    - pg_createcluster: Do not set root.crt for 8.4 clusters, since it gets
      confused about the dummy one.
    - t/020_create_sql_remove.t: Fix parsing of psql -Atl output for new 8.4
      format.
    - t/050_encodings.t: Stop using pg_controldata for checking cluster
      encoding. Just check psql -Atl.

 -- Martin Pitt <mpitt@debian.org>  Tue, 24 Mar 2009 17:26:08 +0100

postgresql-common (97) unstable; urgency=low

  * t/030_errors.t: Fix "no space left on device" test for non-English
    locales.
  * Add cleanpg: Script to remove all PostgreSQL related processes and files.
    This isn't shipped in the package, just kept in the source as a developer
    tool.
  * debian/control: Update section to "database".
  * debian/control: Bump Standards-Version to 3.8.1 (no changes required).
  * t/TestLib.pm, deb_installed(): Properly close the dpkg file descriptor.
    Thanks to Cyril Bouthors for pointing this out!
  * t/001_packages.t: Check that postgres user is in the ssl-cert group.
    Thanks to Cyril Bouthors for the patch!
  * Added support for passing additional options to pg_ctl through a new
    configuration file pg_ctl.conf, or as additional CLI arguments to
    pg_ctlcluster. Add tests in t/085_pg_ctl.conf.t. Thanks to Cyril Bouthors
    <cyril@bouthors.org> for the patch! (Closes: #492843)
  * t/070_non_postgres_clusters.t: Update number of tests for new pg_ctl.conf
    file.
  * t/090_multicluster.t: Check that explicit port specification with
    -p/--port/$PGPORT selects the right cluster in the case of multiple
    existing clusters where none runs on the default port. This reproduces
    #517527.
  * pg_wrapper: Default to latest version if -p, --port, or $PGPORT is
    specified, multiple clusters are available, and none is running on the
    default port 5432. (Closes: #517527)
